2019-06-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	address: rename add to append

	to make sure that addrs are in the same order as in the
	address-book, for address-books that support multiple addrs per
	address.

	* libbalsa/address-book-extern.c (lbe_load_cb):
	* libbalsa/address-book-gpe.c (gpe_read_attr):
	* libbalsa/address-book-ldap.c
	(libbalsa_address_book_ldap_get_address):
	* libbalsa/address-book-ldif.c (address_new_prefill):
	* libbalsa/address-book-rubrica.c (extract_net):
	* libbalsa/address-book-vcard.c
	(libbalsa_address_book_vcard_parse_address):
	* libbalsa/address.c (libbalsa_address_append_addr):
	* libbalsa/address.h:
	* libbalsa/rfc2445.c (cal_address_2445_to_lbaddress):
	* libbalsa/rfc6350.c (rfc6350_eval_line):
	* src/store-address.c (store_address_add_address):

2019-06-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	address: Remove libbalsa_address_get_addr_list()

	Second and final step in keeping address->addr_list private.

	* libbalsa/address.c (libbalsa_address_get_n_addrs),
	(libbalsa_address_get_nth_addr): new functions to provide access
	  to the addr-list;
	* libbalsa/address-book-extern.c
	(libbalsa_address_book_externq_add_address):
	* libbalsa/address-book-gpe.c (gpe_read_address):
	* libbalsa/address-book-ldif.c (lbab_ldif_write_addresses):
	* libbalsa/address-book-osmo.c
	(libbalsa_address_book_osmo_alias_complete):
	* libbalsa/address-book-rubrica.c (lbab_rubrica_load_xml),
	(lbab_insert_address_node), (extract_cards), (extract_net):
	* libbalsa/address-book-text.c (lbab_text_load_file):
	* libbalsa/address-book-vcard.c (lbab_vcard_write_addresses):
	* libbalsa/address.h:
	* libbalsa/rfc6350.c (rfc6350_parse_from_stream):
	* src/ab-main.c (bab_load_cb):
	* src/ab-window.c (balsa_ab_window_load_cb): Use them.

2019-06-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	address: Remove libbalsa_address_set_addr_list()

	Step 1 in keeping address->addr_list private.
