@@ -1,3 +1,7 @@
+2019-06-26  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	* libbalsa/address-book-gpe.c: streamline.
+
 2019-06-25  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	address: rename add to append
